[project]
name = "numpad"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "MANATO", email = "manuel.r.developer@gmail.com" }
]
dependencies = [
    "flet>=0.85.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.0",
    "flet-desktop>=0.85.0",
    "flet-web>=0.85.0",
]

[tool.flet]
desktop_flavor = "light"    # Change to "full" to use flet-audio and flet-video
org = "com.mycompany"
product = "numpad"
company = "manato studio"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
